@startuml
' ERD Auth-Service
entity "Users" as user {
  id : BIGSERIAL [PK] NOT NULL
  email : VARCHAR(255) NOT NULL
  password_hash : VARCHAR(255) NOT NULL
  name : VARCHAR(255)
  adresse : VARCHAR(255)
  date_de_naissance : DATE
  status : VARCHAR(20) NOT NULL
  balance : DECIMAL(15,2)
}
entity "user_audit" as audit {
  id : BIGSERIAL [PK] NOT NULL
  user_id : BIGINT [FK] NOT NULL
  action : VARCHAR(50) NOT NULL
  timestamp : TIMESTAMP NOT NULL
  document_hash : VARCHAR(255)
  ip_address : VARCHAR(45)
  user_agent : VARCHAR(255)
  session_token : VARCHAR(255)
}
entity "mfa_challenges" as mfa {
  id : BIGSERIAL [PK] NOT NULL
  user_id : BIGINT [FK] NOT NULL
  code : VARCHAR(6) NOT NULL
  created_at : TIMESTAMP NOT NULL
  expires_at : TIMESTAMP NOT NULL
  used : BOOLEAN NOT NULL
  ip_address : VARCHAR(45)
  failed_attempts : INT
  locked_until : TIMESTAMP
}
entity "verification_token" as vtoken {
  id : SERIAL [PK] NOT NULL
  user_id : BIGINT [FK] NOT NULL
  token_hash : VARCHAR(255) NOT NULL
  expiry_date : TIMESTAMP NOT NULL
}
user ||--o{ audit : "est journalisé"
user ||--o{ mfa : "accomplit"
user ||--o{ vtoken : "obtient"
@enduml

